mysql-user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.6
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-persistent-storage
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-np
spec:
  type: NodePort
  selector:
    app: mysql
  ports:
    - name: mysql-np
      protocol: TCP
      port: 3306
      targetPort: 3306
