users-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: usersnpservice-srv
spec:
  type: NodePort
  selector:
    app: lidl-twitter-user-service
  ports:
    - name: lidl-twitter-user-service
      protocol: TCP
      port: 80
      targetPort: 80
